# fustor-data-platform

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  quality-check.md  todo.md
datacast/: README.md  pyproject.toml
datacast-core/: README.md  pyproject.toml
datacast-core/src/datacast_core/: __init__.py  drivers.py  exceptions.py
datacast-core/tests/: test_daemon_launcher.py  test_drivers.py  test_logical_clock_edge_cases.py
datacast-core/tests/clock/: test_logical_clock_robustness.py
datacast-core/tests/common/: test_metrics.py
datacast-core/tests/models/: test_config.py  test_event.py  test_log_model.py  test_states.py
datacast-core/tests/pipe/: test_context.py  test_handler.py  test_mapper.py  test_mapper_compile.py  test_mapper_robustness.py  test_pipe.py  test_sender_handler.py
datacast-core/tests/transport/: test_transport.py
datacast-mgmt/: pyproject.toml
datacast-sdk/: README.md  pyproject.toml
datacast-sdk/src/datacast_sdk/: interfaces.py
datacast-sdk/tests/: test_basic.py
datacast/docs/: consumer_guide.md
datacast/docs/architecture/: concurrency.md  core_arch.md  data_flow.md  driver_design.md
datacast/extensions/schema-fs/: README.md  pyproject.toml
datacast/extensions/sender-echo/: pyproject.toml
datacast/extensions/sender-http/: pyproject.toml
datacast/extensions/source-elasticsearch/: README.md  pyproject.toml
datacast/extensions/source-fs/: README.md  pyproject.toml
datacast/extensions/source-mysql/: pyproject.toml
datacast/specs/: L0-VISION.md  L1-CONTRACTS.md  L2-ARCHITECTURE.md
datacast/specs/L3-RUNTIME/: COMMAND_PROTOCOL.md  CONCURRENCY.md  CONFIG_PATTERN.md  CONSISTENCY.md  DRIVER_LIFECYCLE.md  EVENT_BUS.md  HOT_RELOAD.md  LIFECYCLE.md  LOGICAL_CLOCK.md  PACKAGE_STRUCTURE.md  PROTOCOL_CARRIER.md
datacast/src/datacast/: __init__.py  app.py  cli.py  runner.py
datacast/tests/: conftest.py  test_app_lifecycle.py  test_app_reload.py  test_atomic_write_verification.py  test_cli.py  test_config_diff.py  test_config_injection.py  test_config_reload.py  test_datacast_config_loaders.py  test_float_config.py  test_pipes_config.py  test_runner.py  test_zombie_prevention.py
datacast/tests/config/: test_validator.py  test_validators.py
datacast/tests/runtime/: __init__.py  conftest.py  mocks.py  test_bus.py  test_bus_backpressure.py  test_bus_failed_recovery.py  test_control_data_isolation.py  test_datacast_command.py  test_datacast_pipe.py  test_datacast_pipe_audit.py  test_datacast_pipe_bus.py  test_datacast_pipe_command_advanced.py  test_datacast_pipe_error_recovery.py  test_datacast_pipe_heartbeat_reliability.py  test_datacast_pipe_leader_advanced.py  test_datacast_pipe_lifecycle.py  test_datacast_pipe_reliability.py  test_datacast_pipe_remap.py  test_datacast_pipe_resume.py  test_datacast_pipe_role_switch.py  test_pipe_message_sync_crash.py  test_pipe_terminal_error.py  test_sender_handler_adapter.py  test_source_handler_adapter.py  test_source_handler_adapter_discovery.py  test_supervisor_restart.py  test_worker_aiter.py
datacast/tests/services/: test_log_service.py  test_schema_cache.py
datacast/tests/specs/: test_contracts_datacast.py
demo/: pyproject.toml
demo/src/fustor_demo/: auto_generator.py  main.py  mock_agents.py  mock_sensords.py  store.py
extensions/receiver-http/: README.md  pyproject.toml
extensions/schema-fs/: README.md  pyproject.toml
extensions/schema-fs/tests/: test_models.py
extensions/sender-http/: README.md  pyproject.toml
extensions/sender-http/tests/: test_http_sender.py
extensions/sender-openapi/: README.md  pyproject.toml
extensions/sender-openapi/tests/: test_openapi_driver.py
extensions/source-elasticsearch/: README.md  pyproject.toml
extensions/source-elasticsearch/tests/: test_elasticsearch_driver.py
extensions/source-fs/: README.md  flow.md  pyproject.toml
extensions/source-fs/tests/: test_audit_sentinel.py  test_buffer_full_datacast_only.py  test_buffer_full_sensord_only.py  test_continuous_write.py  test_crash_write.py  test_driver_advanced.py  test_driver_drift.py  test_dynamic_monitoring.py  test_enoent_handling.py  test_errno_22_handling.py  test_event_handler_move.py  test_ftp_scenario.py  test_invalid_args.py  (+7 more)
extensions/source-mysql/: README.md  pyproject.toml
extensions/source-oss/: pyproject.toml
extensions/view-fs-forest/: pyproject.toml
fustord/: pyproject.toml
fustord-mgmt/: README.md  pyproject.toml
fustord-mgmt/tests/: test_concurrency_fix.py  test_monitoring_fix.py  test_on_command_fallback.py
fustord-sdk/: README.md  pyproject.toml
fustord-sdk/tests/: test_sdk_surrogate_handling.py
fustord/docs/: README.md
fustord/specs/: L0-VISION.md  L1-CONTRACTS.md  L2-ARCHITECTURE.md
fustord/tests/: __init__.py  conftest.py  test_audit_timeout.py  test_auth_query_key.py  test_cli.py  test_config_strict.py  test_config_validators.py  test_consistency_api.py  test_fustord_runner.py  test_health_api.py  test_lineage_injection.py  test_logical_clock.py  test_metadata_limits.py  test_on_command_fallback.py  test_persistent_parsing.py  test_session_clear.py  test_session_command_queue.py  test_session_expiry.py  test_session_locking.py  test_session_management.py  test_session_sensord_jobs.py  test_sighup_lifecycle.py  test_view_manager.py  test_view_manager_complex.py  test_view_manager_services.py  test_view_state_manager.py  test_views_availability.py  test_vision_gap_fixes.py
sensord/: README.md  pyproject.toml
sensord-mgmt/: README.md  pyproject.toml
sensord-mgmt/tests/: test_processor.py
sensord-sdk/: README.md  pyproject.toml
sensord-sdk/tests/: test_basic.py
sensord/docs/: consumer_guide.md
sensord/specs/: L0-VISION.md  L1-CONTRACTS.md  L2-ARCHITECTURE.md
sensord/tests/: conftest.py  test_agent_config_loaders.py  test_app_lifecycle.py  test_app_reload.py  test_atomic_write_verification.py  test_cli.py  test_config_diff.py  test_config_injection.py  test_config_reload.py  test_float_config.py  test_pipes_config.py  test_runner.py  test_sensord_config_loaders.py  test_zombie_prevention.py
(+624 files in other folders)
