[project]
name = "datacast-core"
version = "0.9.1"
description = "Core foundation for Datacasts - event models, pipe/transport abstractions, and common utilities"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "colorlog>=6.0.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0.0"]

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/core"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.23.0"]
# Optional grpc support
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0"]

[tool.setuptools.packages.find]
where = ["src"]