[project]
name = "datacast-sdk"
version = "0.9.1"
description = "SDK for Fustor datacast service"
license = "MIT"
dependencies = [ "datacast-core"]

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/datacast-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src"]