[project]
name = "datacast"
version = "0.9.1"
description = "realtime data sync datacast for various data sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7", "pydantic>=2.11.7", "python-dotenv", "datacast-core", "datacast-sdk"]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/datacast"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
fs = ["fustor-source-fs", "fustor-schema-fs"]
mysql = ["fustor-source-mysql"]
oss = ["fustor-source-oss"]
elasticsearch = ["fustor-source-elasticsearch"]
http = ["fustor-sender-http"]
echo = ["fustor-sender-echo"]
openapi = ["fustor-sender-openapi"]
mgmt = ["datacast-mgmt[agent]"]
# Default recommended installation
default = ["fustor-source-fs", "fustor-sender-http", "fustor-schema-fs", "datacast-mgmt[agent]"]
# Full install
all = [
    "fustor-source-fs",
    "fustor-source-mysql",
    "fustor-source-oss",
    "fustor-source-elasticsearch",
    "fustor-sender-http",
    "fustor-sender-echo",
    "fustor-sender-openapi",
    "fustor-schema-fs",
    "datacast-mgmt[agent]"
]
dev = [ "pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.0.0"]

[project.scripts]
datacast = "datacast.cli:cli"

[tool.setuptools.packages.find]
where = [ "src"]