[project]
name = "fustor-demo"
version = "0.9.1"
description = "Fustor Bio-fustord Demo for unified directory service"
dependencies = ["fastapi[all]>=0.104.1", "uvicorn>=0.23.2", "sensord-core", "pydantic>=2.0.0", "httpx>=0.25.0"]
requires-python = ">=3.11"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/demo"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[tool.setuptools.packages.find]
where = [ "src"]
