[project]
name = "fustord-mgmt"
version = "0.9.1"
description = "Management (L3) extension for Fustor fustord - Remote commands, monitoring, and UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sensord-core",
    "fastapi",
    "pydantic>=2.0.0"
]

[project.entry-points."fustord.management_routers"]
mgmt = "fustord_mgmt:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fustord_mgmt"]

[tool.hatch.metadata]
allow-direct-references = true
