[project]
name = "fustord-sdk"
version = "0.9.1"
description = "SDK for Fustor fustord service"
license = "MIT"
dependencies = ["datacastst-core", "httpx", "pydantic"]

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/fustord-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src"]