[project]
name = "fustord"
version = "0.9.1"
description = "fustord service for Fustor"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "sqlalchemy==2.0.41",
    "greenlet==3.2.2",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "httpx",
    "orjson",
    "fustor-core"
]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/fustord"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
fs = ["fustor-view-fs", "fustor-schema-fs"]
forest = ["fustor-view-fs-forest", "fustor-view-fs", "fustor-schema-fs"]
mgmt = ["fustord-mgmt"]
# Recommended installation for FS use cases
default = ["fustor-view-fs", "fustor-receiver-http", "fustor-schema-fs", "fustord-mgmt"]
# Full install
all = [
    "fustor-view-fs",
    "fustor-view-fs-forest",
    "fustor-receiver-http",
    "fustor-schema-fs",
    "fustord-mgmt"
]
dev = [ "pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
fustord = "fustord.cli:cli"

[tool.setuptools.packages.find]
where = [ "src"]