[project]
name = "sensord-mgmt"
version = "0.9.1"
description = "Management (L3) extension for Fustor sensord - Remote commands and upgrades"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "sensord-core",
    "sensord-sdk",
    "pyyaml>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."sensord.command_processors"]
default = "sensord_mgmt:CommandProcessor"

[tool.setuptools.packages.find]
where = ["src"]
