[project]
name = "sensord-sdk"
version = "0.9.1"
description = "SDK for Fustor sensord service"
license = "MIT"
dependencies = [ "fustor-core"]

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/sensord-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src"]