[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "fustor-receiver-http"
version = "0.9.1"
description = "Fustor HTTP Receiver - Transport layer for fustord to receive events from datacasts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
dependencies = [
    "datacast-core",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0"]

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[project.urls]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/receiver-http"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

# Entry point for receiver discovery
[project.entry-points."fustord.receivers"]
http = "fustor_receiver_http:HTTPReceiver"



[tool.setuptools.packages.find]
where = ["src"]
