[project]
name = "fustor-schema-fs"
version = "0.9.1"
description = "Fustor File System Schema - Contract between source-fs and view-fs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["datacastst-core"]

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/schema-fs"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[project.optional-dependencies]
models = [
    "pydantic>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pydantic>=2.0.0"]

[tool.setuptools.packages.find]
where = ["src"]