[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "fustor-sender-http"
version = "0.9.1"
description = "Fustor HTTP Sender - Transport layer for sensord to Fusion communication"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
dependencies = [
    "fustor-core",
    "fustor-fusion-sdk"]

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[project.urls]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/sender-http"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

# New entry point for V2 architecture
[project.entry-points."sensord.drivers.senders"]
fusion = "fustor_sender_http:HTTPSender"





[tool.setuptools.packages.find]
where = ["src"]
