[project]
name = "fustor-sender-openapi"
version = "0.9.1"
description = "An OpenAPI sender for Fustor datacast"
requires-python = ">=3.11"
dependencies = [ "datacast-core"]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/sender-openapi"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.entry-points."datacast.drivers.senders"]
openapi = "fustor_sender_openapi:OpenApiDriver"



[tool.setuptools.packages.find]
where = [ "src"]
