[project]
name = "fustor-source-elasticsearch"
version = "0.9.1"
description = "An Elasticsearch source for Fustor sensord"
requires-python = ">=3.11"
dependencies = [ "elasticsearch>=9.2.0", "fustor-core"]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/source-elasticsearch"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.entry-points."sensord.drivers.sources"]
elasticsearch = "fustor_source_elasticsearch:ElasticsearchDriver"

[tool.setuptools.packages.find]
where = [ "src"]
