[project]
name = "fustor-source-fs"
version = "0.9.1"
description = "Fustor sensord FS Source Driver"
license = "MIT"
dependencies = ["sensord-core", "fustor-schema-fs", "watchdog"]

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/source-fs"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[project.entry-points."sensord.drivers.sources"]
fs = "fustor_source_fs:FSDriver"
