[project]
name = "fustor-source-mysql"
version = "0.9.1"
description = "A MySQL source for Fustor sensord"
requires-python = ">=3.11"
dependencies = [ "sensord-core", "aiomysql>=0.2.0", "mysql-replication>=1.0.9"]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/source-mysql"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pytest-asyncio>=0.23.0"]

[project.entry-points."sensord.drivers.sources"]
mysql = "fustor_source_mysql:MysqlDriver"

[tool.setuptools.packages.find]
where = [ "src"]
