[project]
name = "fustor-source-oss"
version = "0.9.1"
description = "Fustor Source Driver for S3-compatible object storage (OSS)"
dependencies = [ "boto3>=1.28.0,<2.0.0", "datacastst-core", "pydantic>=2.0.0,<3.0.0"]
requires-python = ">=3.11"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/source-oss"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.entry-points."datacastst.drivers.sources"]
source_oss = "fustor_source_oss.driver:OssSourceDriver"

[tool.pytest.ini_options]
pythonpath = [ "src"]
testpaths = [ "tests"]
addopts = "--ignore=tests/integration"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = [ "src"]
