[project]
name = "fustor-sender-echo"
version = "0.9.1"
description = "Echo sender driver for Fustor"
requires-python = ">= 3.10"
dependencies = [
    "datacast-core"]
authors = [
    { name = "Fustor Team" }
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/sender-echo"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.entry-points."datacast.drivers.senders"]
echo = "fustor_sender_echo:EchoDriver"

[tool.setuptools.packages.find]
where = [ "src"]
