[project]
name = "fustor-view-fs"
version = "0.9.1"
description = "Fustor FS Consistent View Driver"
license = "MIT"
dependencies = [
    "datacast-core",
    "fustor-schema-fs",
    "fastapi",
    "pydantic"]


[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0"]


[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"



["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/extensions/view-fs"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[project.entry-points."fustord.view_drivers"]
fs = "fustor_view_fs:FSViewDriver"

[project.entry-points."fustord.view_api"]
fs = "fustor_view_fs:create_fs_router"
